add price check feature
